NewArchive/7b33578f5a0242b49ba1a0261f14ca51-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main()':
main.cpp:13:19: error: request for member 'nums' in 'b', which is of non-class type 'int'
     for(int b : b.nums)
                   ^
